902-stack/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: my-app-ingressroute
  namespace: app-902
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/app`)
      kind: Rule
      services:
        - name: my-app-service
          port: 9999
